--- a/styles/gallery.css
+++ b/styles/gallery.css
@@ -1,39 +1,38 @@
 /*Media Queries*/
 @media only screen and (max-width : 1199px),
 only screen and (max-device-width : 1199px){
-  #container {
+  #gallery-container {
     width: 1000px;
   }
 }
  
 @media only screen and (max-width : 999px),
 only screen and (max-device-width : 999px){
-  #container {
+  #gallery-container {
     width: 800px;
   }
 }
  
 @media only screen and (max-width : 799px),
 only screen and (max-device-width : 799px){
-  #container {
+  #gallery-container {
     width: 600px;
   }
 }
  
 @media only screen and (max-width : 599px),
 only screen and (max-device-width : 599px){
-  #container {
+  #gallery-container {
     width: 400px;
   }
 }
  
 @media only screen and (max-width : 399px),
 only screen and (max-device-width : 399px){
-  #container {
+  #gallery-container {
     width: 200px;
   }
 }
-
 
 /* 2nd page CSS */
 .masonry-wrapper {
